*** netmeta, version 6.6-6, 6666-06-06 ***

 ** Major changes **

  * New function funnel.netmeta() for 'comparison-adjusted' funnel
    plots

 ** User-visible changes **

  * netmeta():
    - new list elements:
      - 'k.trts' with number of studies evaluating a treatment
      - 'n.trts' with number of observations receiving a treatment
      - 'events.trts' with number of events observed for a treatment
      - 'n.matrix' with number of observations in direct comparisons
      - 'events.matrix' with number of events in direct comparisons

 ** Bug fixes **

  * netsplit():
    - do not reorder a treatment comparison if reference treatment
      (argument 'reference.group') is part of a combined treatment,
      e.g., for reference.group = "A" and treatment comparison "A + B"
      vs "C", the comparison will not be reordered as "C" vs "A + B"

 ** Internal changes **

  * netcomb() and discomb():
    - check if argument 'sep.components' is a single character


*** netmeta, version 0.9-8, 2018-03-23 ***

 ** Major changes **

  * Main function netmeta():
    - by default, results for fixed effects and random effects network
      meta-analysis are reported (only results for fixed effects model
      were reported in older versions)
    - keep dataset used to conduct network meta-analysis
    - number of events and number of observations can be provided (and
      are considered from R objects created with pairwise() function)

  * Function pairwise():
    - all variables from the original dataset are kept in the output
      dataset

  * Netleague tables
    - show the direct treatment estimates from pairwise comparisons in
      the upper triangle if the table is created for a single network
      meta-analysis
    - report pairwise comparisons of the treatment in the row versus
      the treatment in the column in the lower triangle and column
      versus row in the upper triangle (common presentation for
      network meta-analyses)
